Fix configuration file name in documentation

--- a/packaging/man/apprise.1.html
+++ b/packaging/man/apprise.1.html
@@ -282,9 +282,9 @@ in the following local locations for configuration files and loads them:</p>
 ~/.config/apprise.yml
 
 ~/.apprise/apprise
-~/.apprise/apprise.yaml
+~/.apprise/apprise.yml
 ~/.config/apprise/apprise
-~/.config/apprise/apprise.yaml
+~/.config/apprise/apprise.yml
 
 /etc/apprise
 /etc/apprise.yml
