--- a/packaging/man/apprise.1.html
+++ b/packaging/man/apprise.1.html
@@ -278,18 +278,24 @@ in the following local locations for configuration files and loads them:</p>
 
 <pre><code>~/.apprise
 ~/.apprise.yml
+~/.apprise.yaml
 ~/.config/apprise
 ~/.config/apprise.yml
+~/.config/apprise.yaml
 
 ~/.apprise/apprise
 ~/.apprise/apprise.yml
+~/.apprise/apprise.yaml
 ~/.config/apprise/apprise
 ~/.config/apprise/apprise.yml
+~/.config/apprise/apprise.yaml
 
 /etc/apprise
 /etc/apprise.yml
+/etc/apprise.yaml
 /etc/apprise/apprise
 /etc/apprise/apprise.yml
+/etc/apprise/apprise.yaml
 </code></pre>
 
 <p>If a default configuration file is referenced in any way by the <strong>apprise</strong>
@@ -313,12 +319,12 @@ configuration that you want and only specifically notify a subset of them:</p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
-<p>Apprise is Copyright (C) 2024 Chris Caron <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#x6c;&#x65;&#x61;&#x64;&#50;&#x67;&#111;&#x6c;&#100;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#111;&#109;" data-bare-link="true">&#x6c;&#x65;&#97;&#x64;&#50;&#103;&#111;&#x6c;&#100;&#64;&#103;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;</a></p>
+<p>Apprise is Copyright (C) 2024 Chris Caron <a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#58;&#x6c;&#x65;&#97;&#x64;&#50;&#x67;&#111;&#108;&#x64;&#x40;&#103;&#109;&#97;&#105;&#x6c;&#46;&#99;&#111;&#109;" data-bare-link="true">&#108;&#x65;&#x61;&#100;&#50;&#x67;&#x6f;&#x6c;&#x64;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>Chris Caron &lt;lead2gold@gmail.com&gt;</li>
-    <li class='tc'>January 2024</li>
+    <li class='tc'>March 2024</li>
     <li class='tr'>apprise(1)</li>
   </ol>
 
