--- a/packaging/man/apprise.1.html
+++ b/packaging/man/apprise.1.html
@@ -316,7 +316,7 @@ configuration that you want and only specifically notify a subset of them:</p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
-<p>Apprise is Copyright (C) 2024 Chris Caron <a href="&#109;&#97;&#x69;&#108;&#x74;&#111;&#58;&#108;&#101;&#97;&#100;&#50;&#x67;&#111;&#x6c;&#x64;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#109;" data-bare-link="true">&#x6c;&#x65;&#x61;&#x64;&#x32;&#103;&#x6f;&#108;&#100;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#x63;&#111;&#109;</a></p>
+<p>Apprise is Copyright (C) 2024 Chris Caron <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#x6c;&#x65;&#97;&#x64;&#x32;&#103;&#x6f;&#108;&#x64;&#x40;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#111;&#109;" data-bare-link="true">&#x6c;&#101;&#x61;&#x64;&#50;&#103;&#x6f;&#108;&#x64;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#109;</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
