--- a/packaging/man/apprise.1.html
+++ b/packaging/man/apprise.1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv='content-type' value='text/html;charset=utf8'>
-  <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
+  <meta http-equiv='content-type' content='text/html;charset=utf8'>
+  <meta name='generator' content='Ronn-NG/v0.9.1 (http://github.com/apjanke/ronn-ng/tree/0.9.1)'>
   <title>apprise(1) - Push Notifications that work with just about every platform!</title>
   <style type='text/css' media='all'>
   /* style: man */
@@ -72,14 +72,15 @@
     <li class='tr'>apprise(1)</li>
   </ol>
 
-  <h2 id="NAME">NAME</h2>
+  
+
+<h2 id="NAME">NAME</h2>
 <p class="man-name">
   <code>apprise</code> - <span class="man-whatis">Push Notifications that work with just about every platform!</span>
 </p>
-
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>apprise</code> [<var>options</var>...] <var>service-url</var>...<br /></p>
+<p><code>apprise</code> [<var>options</var>...] <var>service-url</var>...<br></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
@@ -88,91 +89,90 @@ popular notification services available to us today such as: Discord,
 Telegram, Pushbullet, Slack, Twitter, etc.</p>
 
 <ul>
-<li>One notification library to rule them all.</li>
-<li>A common and intuitive notification syntax.</li>
-<li>Supports the handling of images (to the notification services that will
+  <li>One notification library to rule them all.</li>
+  <li>A common and intuitive notification syntax.</li>
+  <li>Supports the handling of images (to the notification services that will
 accept them).</li>
 </ul>
-
 
 <h2 id="OPTIONS">OPTIONS</h2>
 
 <p>The Apprise options are as follows:</p>
 
-<p>  <code>-b</code>, <code>--body=</code><var>TEXT</var>:
+<p><code>-b</code>, <code>--body=</code><var>TEXT</var>:
   Specify the message body. If no body is specified then content is read from
   <var>stdin</var>.</p>
 
-<p>  <code>-t</code>, <code>--title=</code><var>TEXT</var>:
+<p><code>-t</code>, <code>--title=</code><var>TEXT</var>:
   Specify the message title. This field is complete optional.</p>
 
-<p>  <code>-c</code>, <code>--config=</code><var>CONFIG-URL</var>:
+<p><code>-c</code>, <code>--config=</code><var>CONFIG-URL</var>:
   Specify one or more configuration locations.</p>
 
-<p>  <code>-a</code>, <code>--attach=</code><var>ATTACH-URL</var>:
+<p><code>-a</code>, <code>--attach=</code><var>ATTACH-URL</var>:
   Specify one or more file attachment locations.</p>
 
-<p>  <code>-P</code>, <code>--plugin-path=</code><var>PLUGIN-PATH</var>:
+<p><code>-P</code>, <code>--plugin-path=</code><var>PLUGIN-PATH</var>:
   Specify a path to scan for custom notification plugin support.
   You can create your own notification by simply creating a Python file
   that contains the <code>@notify("schema")</code> decorator.</p>
 
-<p>  You can optioanly chose to specify more then one <strong>--plugin-path</strong> (<strong>-P</strong>)
+<p>You can optioanly chose to specify more then one <strong>--plugin-path</strong> (<strong>-P</strong>)
   to increase the modules included.</p>
 
-<p>  <code>-n</code>, <code>--notification-type=</code><var>TYPE</var>:
+<p><code>-n</code>, <code>--notification-type=</code><var>TYPE</var>:
   Specify the message type (default=info). Possible values are "info",
   "success", "failure", and "warning".</p>
 
-<p>  <code>-i</code>, <code>--input-format=</code><var>FORMAT</var>:
+<p><code>-i</code>, <code>--input-format=</code><var>FORMAT</var>:
   Specify the input message format (default=text). Possible values are "text",
   "html", and "markdown".</p>
 
-<p>  <code>-T</code>, <code>--theme=</code>THEME:
+<p><code>-T</code>, <code>--theme=</code>THEME:
   Specify the default theme.</p>
 
-<p>  <code>-g</code>, <code>--tag=</code>TAG:
+<p><code>-g</code>, <code>--tag=</code>TAG:
   Specify one or more tags to filter which services to notify. Use multiple
   <strong>--tag</strong> (<strong>-g</strong>) entries to <code>OR</code> the tags together and comma separated
   to <code>AND</code> them. If no tags are specified then all services are notified.</p>
 
-<p>  <code>-Da</code>, <code>--disable-async</code>:
+<p><code>-Da</code>, <code>--disable-async</code>:
   Send notifications synchronously (one after the other) instead of
   all at once.</p>
 
-<p>  <code>-R</code>, <code>--recursion-depth</code>:
+<p><code>-R</code>, <code>--recursion-depth</code>:
   he number of recursive import entries that can be loaded from within
   Apprise configuration. By default this is set to 1. If this is set to
   zero, then import statements found in any configuration is ignored.</p>
 
-<p>  <code>-e</code>, <code>--interpret-escapes</code>
+<p><code>-e</code>, <code>--interpret-escapes</code>
   Enable interpretation of backslash escapes. For example, this would convert
   sequences such as \n and \r to their respected ascii new-line and carriage</p>
 
-<p>  <code>-j</code>, <code>--interpret-emojis</code>
+<p><code>-j</code>, <code>--interpret-emojis</code>
   Enable interpretation of emoji strings. For example, this would convert
   sequences such as :smile: or :grin: to their respected unicode emoji
   character.</p>
 
-<p>  <code>-d</code>, <code>--dry-run</code>:
+<p><code>-d</code>, <code>--dry-run</code>:
   Perform a trial run but only prints the notification services to-be
   triggered to <strong>stdout</strong>. Notifications are never sent using this mode.</p>
 
-<p>  return characters prior to the delivery of the notification.</p>
+<p>return characters prior to the delivery of the notification.</p>
 
-<p>  <code>-l</code>, <code>--details</code>
+<p><code>-l</code>, <code>--details</code>
   Prints details about the current services supported by Apprise.</p>
 
-<p>  <code>-v</code>, <code>--verbose</code>:
+<p><code>-v</code>, <code>--verbose</code>:
   The more of these you specify, the more verbose the output is. e.g: -vvvv</p>
 
-<p>  <code>-D</code>, <code>--debug</code>:
+<p><code>-D</code>, <code>--debug</code>:
   A debug mode; useful for troubleshooting.</p>
 
-<p>  <code>-V</code>, <code>--version</code>:
+<p><code>-V</code>, <code>--version</code>:
   Display the apprise version and exit.</p>
 
-<p>  <code>-h</code>, <code>--help</code>:
+<p><code>-h</code>, <code>--help</code>:
   Show this message and exit.</p>
 
 <h2 id="EXIT-STATUS">EXIT STATUS</h2>
@@ -180,14 +180,17 @@ accept them).</li>
 <p><strong>apprise</strong> exits with a status of:</p>
 
 <ul>
-<li><strong>0</strong> if all of the notifications were sent successfully.</li>
-<li><strong>1</strong> if one or more notifications could not be sent.</li>
-<li><strong>2</strong> if there was an error specified on the command line such as not
+  <li>
+<strong>0</strong> if all of the notifications were sent successfully.</li>
+  <li>
+<strong>1</strong> if one or more notifications could not be sent.</li>
+  <li>
+<strong>2</strong> if there was an error specified on the command line such as not
 providing an valid argument.</li>
-<li><strong>3</strong> if there was one or more Apprise Service URLs successfully
+  <li>
+<strong>3</strong> if there was one or more Apprise Service URLs successfully
 loaded but none could be notified due to user filtering (via tags).</li>
 </ul>
-
 
 <h2 id="SERVICE-URLS">SERVICE URLS</h2>
 
@@ -233,7 +236,6 @@ notification service URLs and only notify the ones tagged as <em>devops</em>.</p
 </code></pre>
 
 <h2 id="CUSTOM-PLUGIN-NOTIFICATIONS">CUSTOM PLUGIN/NOTIFICATIONS</h2>
-
 <p>Apprise can additionally allow you to define your own custom <strong>schema://</strong>
 entries that you can trigger on and call services you've defined.</p>
 
@@ -254,10 +256,10 @@ it:
 @notify(on="foobar", name="My Custom Notification")
 def my_wrapper(body, title, notify_type, *args, **kwargs):
 
-     &lt;define your custom code here>
-
-        # Returning True/False is a way to relay your status back to Apprise.
-        # Returning nothing (None by default) is always interpreted as a Success
+     &lt;define your custom code here&gt;
+   
+		# Returning True/False is a way to relay your status back to Apprise.
+		# Returning nothing (None by default) is always interpreted as a Success
      return True
 </code></pre>
 
@@ -316,12 +318,11 @@ configuration that you want and only specifically notify a subset of them:</p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
-<p>Apprise is Copyright (C) 2024 Chris Caron <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#108;&#101;&#97;&#100;&#x32;&#x67;&#x6f;&#108;&#100;&#64;&#x67;&#109;&#x61;&#105;&#x6c;&#46;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#108;&#x65;&#97;&#100;&#50;&#x67;&#111;&#x6c;&#x64;&#x40;&#103;&#x6d;&#x61;&#x69;&#x6c;&#46;&#99;&#111;&#x6d;</a></p>
-
+<p>Apprise is Copyright (C) 2024 Chris Caron <a href="mailto:lead2gold@gmail.com" data-bare-link="true">lead2gold@gmail.com</a></p>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>Chris Caron &lt;lead2gold@gmail.com&gt;</li>
-    <li class='tc'>March 2024</li>
+    <li class='tc'>July 2024</li>
     <li class='tr'>apprise(1)</li>
   </ol>
 
