cleaned up docs

--- a/packaging/man/apprise.1.html
+++ b/packaging/man/apprise.1.html
@@ -64,6 +64,7 @@
     <a href="#CUSTOM-PLUGIN-NOTIFICATIONS">CUSTOM PLUGIN/NOTIFICATIONS</a>
     <a href="#CONFIGURATION">CONFIGURATION</a>
     <a href="#BUGS">BUGS</a>
+    <a href="#DONATIONS">DONATIONS</a>
     <a href="#COPYRIGHT">COPYRIGHT</a>
   </div>
 
@@ -316,7 +317,7 @@ def my_wrapper(body, title, notify_type, *args, **kwargs):
 
      print("Define your custom code here")
 
-     # Returning True/False will relay your status back through Apprise.
+     # Returning True/False will relay your status back through Apprise
      # Returning nothing (None by default) is always interpreted as True
      return True
 </code></pre>
@@ -374,6 +375,9 @@ configuration that you want and only specifically notify a subset of them:</p>
 
 <p>If you find any bugs, please make them known at:
 <a href="https://github.com/caronc/apprise/issues" data-bare-link="true">https://github.com/caronc/apprise/issues</a></p>
+
+<h2 id="DONATIONS">DONATIONS</h2>
+<p>If you found Apprise useful at all, <a href="#DONATIONS" title="DONATIONS" data-bare-link="true">please consider donating</a>!</p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
