fix(telegram): support <code> blocks wrapped in <pre> for syntax highlighting

--- a/tests/var/01_test_example.html
+++ b/tests/var/01_test_example.html
@@ -44,8 +44,9 @@
       <div>A div entry</div>
       <p>
         <span>A div entry</span>
-        <pre>A pre entry</pre>
       </p>
+
+      <pre><code class="language-python">print('hello')</code></pre>
 
       <h3>Heading 3</h3>
       <h4>Heading 4</h4>
