more appriseit references updated

--- a/packaging/man/apprise.1.html
+++ b/packaging/man/apprise.1.html
@@ -204,7 +204,7 @@ accept them).</li>
 <pre><code>~/.local/share/apprise/cache
 </code></pre>
 
-<p>To utilize the <a href="https://github.com/caronc/apprise/wiki/persistent_storage">persistent storage</a> element associated with Apprise, simply
+<p>To utilize the <a href="https://appriseit.com/getting-started/persistent-storage/">persistent storage</a> element associated with Apprise, simply
 specify the keyword <strong>storage</strong></p>
 
 <pre><code>$ apprise storage
@@ -245,7 +245,7 @@ loaded but none could be notified due to user filtering (via tags).</li>
 <h2 id="SERVICE-URLS">SERVICE URLS</h2>
 
 <p>There are to many service URL and combinations to list here. It's best to
-visit the <a href="https://github.com/caronc/apprise/wiki#notification-services">Apprise GitHub page</a> and see what's available.</p>
+visit the <a href="https://appriseit.com/services/">Apprise GitHub page</a> and see what's available.</p>
 
 <p>The <strong>environment variable</strong> of <code>APPRISE_URLS</code> (comma/space delimited) can be specified to
 provide the default set of URLs you wish to notify if none are otherwise specified.</p>
@@ -339,8 +339,8 @@ def my_wrapper(body, title, notify_type, *args, **kwargs):
 <h2 id="CONFIGURATION">CONFIGURATION</h2>
 
 <p>A configuration file can be in the format of either <strong>TEXT</strong> or <strong>YAML</strong> where
-<a href="https://github.com/caronc/apprise/wiki/config_text">TEXT</a> is the easiest and most ideal solution for most users.  However
-<a href="https://github.com/caronc/apprise/wiki/config_yaml">YAML</a> configuration files grants the user a bit more leverage and access
+<a href="https://appriseit.com/config/text/">TEXT</a> is the easiest and most ideal solution for most users.  However
+<a href="https://appriseit.com/config/yaml/">YAML</a> configuration files grants the user a bit more leverage and access
 to some of the internal features of Apprise. Reguardless of which format you choose,
 both provide the users the ability to leverage <strong>tagging</strong> which adds a more rich and
 powerful notification environment.</p>
@@ -381,7 +381,7 @@ tool simplifies to:</p>
 <pre><code>$ apprise -vv -t "my title" -b "my notification body"
 </code></pre>
 
-<p>If you leveraged <a href="https://github.com/caronc/apprise/wiki/CLI_Usage#label-leverage-tagging">tagging</a>, you can define all of Apprise Service URLs in your
+<p>If you leveraged <a href="https://appriseit.com/guides/#leverage-tagging">tagging</a>, you can define all of Apprise Service URLs in your
 configuration that you want and only specifically notify a subset of them:</p>
 
 <pre><code>$ apprise -vv --title "Will Be Late Getting Home" \
@@ -412,7 +412,7 @@ configuration that you want and only specifically notify a subset of them:</p>
 <a href="https://github.com/caronc/apprise/issues" data-bare-link="true">https://github.com/caronc/apprise/issues</a></p>
 
 <h2 id="DONATIONS">DONATIONS</h2>
-<p>If you found Apprise useful at all, <a href="#DONATIONS" title="DONATIONS" data-bare-link="true">please consider donating</a>!</p>
+<p>If you found Apprise useful at all, <a href="https://github.com/sponsors/caronc">please consider sponsoring</a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MHANV39UZNQ5E">donating</a>!</p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
@@ -420,7 +420,7 @@ configuration that you want and only specifically notify a subset of them:</p>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>Chris Caron &lt;lead2gold@gmail.com&gt;</li>
-    <li class='tc'>September 2025</li>
+    <li class='tc'>January 2026</li>
     <li class='tr'>apprise(1)</li>
   </ol>
 
