updated PayPal details for Apprise donations

--- a/packaging/man/apprise.1.html
+++ b/packaging/man/apprise.1.html
@@ -436,7 +436,7 @@ configuration that you want and only specifically notify a subset of them:</p>
 <a href="https://github.com/caronc/apprise/issues" data-bare-link="true">https://github.com/caronc/apprise/issues</a></p>
 
 <h2 id="DONATIONS">DONATIONS</h2>
-<p>If you found Apprise useful at all, <a href="https://github.com/sponsors/caronc">please consider sponsoring</a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MHANV39UZNQ5E">donating</a>!</p>
+<p>If you found Apprise useful at all, <a href="https://github.com/sponsors/caronc">please consider sponsoring</a> or <a href="https://www.paypal.com/donate/?hosted_button_id=CR6YF7KLQWQ5E">donating</a>!</p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
